--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -1,26 +1,49 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
-name: Java CI with Maven
+name: Docker Build and Push
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
+
+
+env:
+  PROJECT_ID: ${{ secrets.PROJECT_ID }}
+  IMAGE_NAME: web
+  DOCKERFILE_PATH: ./Dockerfile
+  REGION: asia-northeast3
+  REPOSITORY: repository
 
 jobs:
-  build:
-
+  build_and_push:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v1'
         with:
-          java-version: '11'
-          distribution: 'adopt'
-          cache: maven
-      - name: Build with Maven Wrapper
-        run: ./mvnw -B package
+          token_format: 'access_token'
+          workload_identity_provider: projects/828614594239/locations/global/workloadIdentityPools/wif-pool/providers/github-provider
+          service_account: 'github-service-account@amazing-source-396109.iam.gserviceaccount.com'
+          audience: 'https://github.com/Taewoogit/test-wif'
+
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@main
+
+      - name: Configure Docker to use Artifact Registry
+        run: echo ${{steps.auth.outputs.access_token}} | docker login -u oauth2accesstoken --password-stdin ${{ format('{0}-docker.pkg.dev', env.REGION) }}
+
+      - name: Build and push Docker image
+        run: |
+          docker build -t ${{ format('{0}-docker.pkg.dev/{1}/{2}/{3}:{4}', env.REGION, env.PROJECT_ID, env.REPOSITORY, env.IMAGE_NAME, github.run_number) }} .
+          docker push ${{ format('{0}-docker.pkg.dev/{1}/{2}/{3}:{4}', env.REGION, env.PROJECT_ID, env.REPOSITORY, env.IMAGE_NAME, github.run_number) }}
